--- a/ArgoCD/bootstrap/root-app.yml
+++ b/ArgoCD/bootstrap/root-app.yml
@@ -1,20 +1,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
- name: root
- namespace: argocd
-spec:
- source:
-  repoURL: https://github.com/baachi8/gitops-argocd-hub-spoke-
-  tragetRevison: main #ArgoCD points to mian brach
-  path: argocd
- destination:
-  server: https://kubernetes.default.svc
+  name: root
   namespace: argocd
- syncPolicy:
-  automated:
-   prune: true #if anything deletes from git it will delets in the cluster
-   selfHeal: true # if any human errors has done manually it will slef heal accroding the git instructions
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/baachi8/gitops-argocd-hub-spoke
+    targetRevision: main
+    path: argocd
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: argocd
+  syncPolicy:
+    automated:
+      prune: true #if anything deletes from git it will delets in the cluster
+      selfHeal: true # if any human errors has done manually it will slef heal accroding the git instructions
   
 
 
