--- a/argocd/applicationsets/nginx-appset.yaml
+++ b/argocd/applicationsets/nginx-appset.yaml
@@ -17,7 +17,7 @@ spec:
     metadata:
       name: nginx-{{name}}
     spec:
-      project: platform
+      project: apps
       source:
         repoURL: https://github.com/baachi8/gitops-argocd-hub-spoke.git
         targetRevision: main
